--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,42 +1,108 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.app {
+  background-image: url("./assets/bg.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+}
+p {
+  font-size: 20px;
+}
+.content {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
+  padding-left: 50px;
+  padding-bottom: 20px;
+  box-sizing: border-box;
+}
+.heading {
+  height: 8vh;
+  width: 75vw;
+}
+.heading h1 {
+  margin: 0;
+  text-align: center;
+  font-size: 50px;
+}
+.prompt {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  height: 8vh;
+  width: 75vw;
+  border: 1px solid #006600;
+}
+::-webkit-scrollbar {
+  width: 1px;
+}
+
+.conservation {
+  overflow: auto;
+  height: 65vh;
+  width: 75vw;
+  border-radius: 10px;
+  border: 2px solid #006600;
+}
+.prompt input {
+  width: 100%;
+  height: 100%;
+  transition: all 1s;
+  background-color: transparent;
+  border: 1px solid #006600;
+  padding: 15px;
+  box-sizing: border-box;
+  color: #006600;
+  font-size: 25px;
+}
+.prompt button {
+  height: 100%;
+  background-color: #219fdd;
+  transition: all 0.1s;
+  font-size: 40px;
+  margin: 0;
+}
+.prompt input:focus {
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  outline: none;
+}
+.prompt button:hover {
+  transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  transform: rotate(180deg);
+}
+::-webkit-input-placeholder {
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+:-moz-placeholder {
+  text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
+.loading {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding-left: 20px;
+}
+.loader {
+  margin-top: 10px;
+  border: 5px solid #48948b;
+  border-top: 5px solid #ffffff;
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin-bottom: 7px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
